# libgago

./: CMakeLists.txt  README.md
arduino/motor_control/: motor_control.ino
cmake/Modules/: LibGagoConfig.cmake
src/: CMakeLists.txt  gago.h  test.cpp
src/algorithm/: non_blocking_observer.hpp  observable.hpp  observer.hpp
src/io/usb/: serial.h
src/io/video/: camera.cpp  camera.h  camera_configuration.h  camera_meta.h  camera_settings.cpp  camera_settings.h  camera_status.cpp  camera_status.h  capture.h  icamera_driver.h  icamera_watcher.h  v4l_driver.cpp  v4l_driver.h
src/io/video/cross_platform/: opencv_camera.cpp  opencv_camera.h  opencv_driver.cpp  opencv_driver.h
src/io/video/linux/: v4l_camera.cpp  v4l_camera.h  v4l_driver.cpp  v4l_driver.h
src/io/video/linux/codecs/: mjpeg_2_rgb.cpp  mjpeg_2_rgb.h  yuyv_2_rgb.cpp  yuyv_2_rgb.h
